--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,7 +12,8 @@
         "baseUrl": ".",
         "paths": {
             "@/*": [
-                "./src/*"
+                "./src/*",
+                "src/*"
             ]
         },
         "noImplicitAny": false,
