--- a/backend/my_portfolio_chat_entry_point/requirements.txt
+++ b/backend/my_portfolio_chat_entry_point/requirements.txt
@@ -1,4 +1,55 @@
-flask
-openai
-google-cloud-firestore
-gunicorn
+annotated-types==0.7.0
+anyio==4.9.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+cloudevents==1.11.0
+Deprecated==1.2.18
+deprecation==2.1.0
+distro==1.9.0
+Flask==3.1.0
+flask-cors==5.0.1
+Flask-Limiter==3.12
+functions-framework==3.8.2
+google-api-core==2.24.2
+google-auth==2.38.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.20.1
+googleapis-common-protos==1.69.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.9.0
+limits==4.4.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+openai==1.69.0
+ordered-set==4.1.0
+packaging==24.2
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.0
+pydantic_core==2.33.0
+Pygments==2.19.1
+requests==2.32.3
+rich==13.9.4
+rsa==4.9
+sniffio==1.3.1
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.0
+urllib3==2.3.0
+watchdog==6.0.0
+Werkzeug==3.1.3
+wrapt==1.17.2
