--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ __pycache__/
 backend/my_portfolio_chat_entry_point/.venv/
 backend/my_portfolio_chat_entry_point/.env
 
-
 # frontend
 # Logs
 logs
@@ -16,9 +15,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies and build output
 node_modules
 dist
 dist-ssr
+build
 *.local
 
 # Editor directories and files
@@ -31,4 +32,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
 
